*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.12 ===
* Implemented Autogain tool for controlling the loudness of the signal according
  to ITU-R BS.1770-4 specificaions.
* Implemented SIMD-optimized curve and gain calculation functions for compressors
  which allow to lower the CPU consumption by compressor plugins.
* More AVX-512 optimized functions added to the low-level DSP code.
* Additional SIMD-optimized functions added to DSP library.
* Fixed VST2 plugin crash on UI close in OBS Studio.
* Fixed invalid default values of parameters for CLAP plugin format.
* Fixed double memory free of generated port metadata in CLAP, VST2 and LV2 wrappers.

=== 1.2.11 ===
* Added partial support of AVX-512 instruction set.
* Windows support changed to experimental.
* Fixed code issues reported by the PVS Studio static analyzer.
* Fixed improper band characteristics drawn on band Mute for multiband plugins in
  Linear Phase mode.

=== 1.2.10 ===
* Implemented Beat Breather plugin series.
* Added phase switches to Delay Compensator plugin series.
* Implemented Stereo Split mode for stereo version of all dynamic plugins:
  * Compressor and Multiband Compressor;
  * Dynamics Processor and Multiband Dynamics Processor;
  * Expander and Multiband Expander;
  * Gate and Multiband Gate;
  * GOTT Compressor.
* Added Allpass filter to the Filter plugin series.
* Added Bandpass, Ladder-pass and Ladder-rej filters to Parametric Equalizer
  plugin series.
* Introduced Linear Phase mode for the Crossover plugin series.
* Introduced Linear Phase mode for multiband plugin series:
  * GOTT Compressor;
  * Multiband Compressor;
  * Multiband Dynamics Processor;
  * Multiband Expander;
  * Multiband Gate;
  * Multiband Limiter.
* Fixed missing inline display for Phase Detector plugin.
* Fixed invalid input signal level metering for Flanger plugin series.